# net-rs

./: Cargo.toml  README.md
src/: act.rs  activation.rs  array.rs  cost.rs  draw.rs  init.rs  linalg.rs  main.rs  mat.rs  mat_test.rs  matrix.rs  matrix_slice.rs  mnist.rs  net.rs  network.rs  num.rs  num_fn.rs  one_hot.rs  step.rs  vector.rs
