[package]
name = "net-rs"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"matrixmultiply" = { features=["threading"], version = "0.3.2" }
"serde" = { deatures=["derive"], version = "1.0.148" }
"derive_builder" = "0.12.0"
"serde_derive" = "1.0.148"
"serde_json" = "1.0.89"
"rand" =  "0.8.5"